# graphics-hw

./: CMakeLists.txt  README.md  camera.go  deferred.go  gbuffer.go  gen_norm.py  lbuffer.go  main.go  model.go  object.go  program.go  scene.go  torch.go
application/: app.go
camera/: camera.go
consts/: consts.go
include/: app.h  shader.hpp
model/: model.go  object.go
program/: program.go
scene/: scene.go
screen/: event.go  screen.go
shaders/: fragment.glsl  vertex.glsl
shaders/debug/: fragment.glsl  vertex.glsl
shaders/gbuffer/: fragment.glsl  vertex.glsl
shaders/general/: fragment.glsl  vertex.glsl
shaders/lbuffer/: fragment.glsl  vertex.glsl
shaders/screen/: fragment.glsl  vertex.glsl
shaders/shadow/: fragment.glsl  vertex.glsl
shaders/surface/: fragment.glsl  vertex.glsl
shaders/wave/: fragment.glsl  vertex.glsl
src/: app.cpp  main.cpp  texture.c
src/shaders/: fragment.glsl  vertex.glsl
utils/: utils.go
wave/: particle.go  wave.go
